Added deleteFromSubject method
