# cmd/server/main.go
@@ -117,6 +117,7 @@ func main() {
 	mux.HandleFunc("/events/get", middleware.Auth(middleware.Metrics(httpHandlers.GetEventByIDHandler, "get_event"), cfg.AuthToken))
 	mux.HandleFunc("/events/stream", middleware.Auth(middleware.Metrics(httpHandlers.StreamEventsFromSubjectHandler, "stream_events"), cfg.AuthToken))
 	mux.HandleFunc("/events/historic", middleware.Auth(middleware.Metrics(httpHandlers.GetHistoricEventsFromSubject, "get_historic_events"), cfg.AuthToken))
+	mux.HandleFunc("/subjects/delete", middleware.Auth(middleware.Metrics(httpHandlers.DeleteFromSubject, "delete_from_subject"), cfg.AuthToken))
 
 	// Wrap the mux with our logging middleware
 	handler := middleware.Logging(log, mux)
